// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid integer 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Invalid value for flag --attempts: "nope". Expected a string representing a finite number
",
  "stdout": "DESCRIPTION
  Verify that the registry serves the release described by a plan: version visibility, tarball digest, and dist-tag target.

USAGE
  npm-release verify [flags]

FLAGS
  --plan file                Path to a JSON verify plan: { schemaVersion, version, npmTag, packages }
  --registry string          Registry to query
  --attempts integer         How many times to re-check a package that has not converged
  --delay-seconds integer    Seconds to wait between convergence checks

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
[time] ERROR (#2): ~effect/cli/CliError/ShowHelp: Help requested
",
}
`;

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > missing required plan 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Missing required flag: --plan
",
  "stdout": "DESCRIPTION
  Verify that the registry serves the release described by a plan: version visibility, tarball digest, and dist-tag target.

USAGE
  npm-release verify [flags]

FLAGS
  --plan file                Path to a JSON verify plan: { schemaVersion, version, npmTag, packages }
  --registry string          Registry to query
  --attempts integer         How many times to re-check a package that has not converged
  --delay-seconds integer    Seconds to wait between convergence checks

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
[time] ERROR (#2): ~effect/cli/CliError/ShowHelp: Help requested
",
}
`;

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > root help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "USAGE
  npm-release <subcommand> [flags]

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)

SUBCOMMANDS
  verify    Verify that the registry serves the release described by a plan: version visibility, tarball digest, and dist-tag target.
",
}
`;

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > verify help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  Verify that the registry serves the release described by a plan: version visibility, tarball digest, and dist-tag target.

USAGE
  npm-release verify [flags]

FLAGS
  --plan file                Path to a JSON verify plan: { schemaVersion, version, npmTag, packages }
  --registry string          Registry to query
  --attempts integer         How many times to re-check a package that has not converged
  --delay-seconds integer    Seconds to wait between convergence checks

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
",
}
`;

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > version 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "npm-release v0.1.0
",
}
`;
